--- a/static/index.html
+++ b/static/index.html
@@ -38,8 +38,7 @@
 
   /* Header */
   header.site-header{
-    position:fixed; top:0; left:0; right:0; z-index:1000;
-    height:64px;
+    position:fixed; top:0; left:0; right:0; z-index:1000; height:64px;
     background:linear-gradient(180deg, var(--bg-soft) 0%, #0B1526 100%);
     border-bottom:1px solid rgba(255,255,255,.08);
     display:flex; align-items:center; justify-content:center;
@@ -130,23 +129,31 @@
   .video-wrapper video{width:100%;height:auto;max-height:62vh;display:block;object-fit:cover;border-radius:0;}
   @media(max-width:980px){.video-wrapper{border:1px solid rgba(245,247,250,0.22);}}
 
-/* Controls */
+/* === Controls (auto-hide in minimized; hover/tap reveal) === */
   .fullscreen-btn,
   .pause-btn{
     position:absolute;background:rgba(17,23,34,.78);color:var(--text);
     font-size:20px;font-weight:600;line-height:1;padding:10px 14px;border:none;border-radius:12px;
-    cursor:pointer;transition:background .2s ease,transform .06s ease, box-shadow .2s ease;z-index:3;
+    cursor:pointer;transition:background .2s ease,transform .06s ease, box-shadow .2s ease, opacity .18s ease;z-index:3;
     border:1px solid rgba(255,255,255,.28);
-    backdrop-filter:blur(6px) saturate(120%);
-    box-shadow:0 6px 22px rgba(0,0,0,.55);
+    backdrop-filter:blur(6px) saturate(120%); box-shadow:0 6px 22px rgba(0,0,0,.55);
+    opacity:0; pointer-events:none;
   }
   .fullscreen-btn:hover,.pause-btn:hover{background:rgba(17,23,34,.92);transform:translateY(-1px);}
 
-  /* Expand button LOWER in normal view (closer to corner) */
-  .fullscreen-btn{ right:12px; bottom:12px; display:flex; }
-  .pause-btn{ left:12px; bottom:64px; display:none; } /* only visible in fullscreen */
+  /* Positions */
+  .fullscreen-btn{ right:12px; bottom:12px; }
+  .pause-btn{ left:12px; bottom:12px; }
 
-/* "i" pill */
+  /* Show on mobile tap or desktop hover when minimized */
+  .video-wrapper.show-controls .fullscreen-btn,
+  .video-wrapper.show-controls .pause-btn{ opacity:1; pointer-events:auto; }
+  @media (hover:hover){
+    .video-wrapper:hover .fullscreen-btn,
+    .video-wrapper:hover .pause-btn{ opacity:1; pointer-events:auto; }
+  }
+
+  /* "i" pill */
   .learnmore-btn{
     position:absolute;top:12px;right:12px;z-index:3;
     display:inline-flex;align-items:center;justify-content:center;
@@ -162,21 +169,23 @@
   .learnmore-btn.expanded .label,.learnmore-btn:hover .label,.learnmore-btn:focus-visible .label{max-width:120px;opacity:1;margin-left:2px;}
   .learnmore-btn:hover{background:rgba(17,23,34,0.8);}
 
-/* Native fullscreen (desktop/tablet) */
+  /* Native fullscreen (desktop/tablet) */
   .video-wrapper:fullscreen,.video-wrapper:-webkit-full-screen{width:100vw;height:100vh;max-width:none;border-radius:0;}
   .video-wrapper:fullscreen video,.video-wrapper:-webkit-full-screen video{width:100%;height:100%;max-height:none;object-fit:contain;border-radius:0;box-shadow:none;}
   .video-wrapper:fullscreen .learnmore-btn,.video-wrapper:-webkit-full-screen .learnmore-btn{ display:none; }
 
-  /* Stronger, clearer controls in FULLSCREEN */
-  .video-wrapper:fullscreen .timeline,
-  .video-wrapper:-webkit-full-screen .timeline,
+  /* Fullscreen controls visible by default (desktop); can be hidden via fs-hidden (mobile toggle) */
+  .video-wrapper:fullscreen .fullscreen-btn,
   .video-wrapper:fullscreen .pause-btn,
-  .video-wrapper:-webkit-full-screen .pause-btn{
-    display:flex;
+  .video-wrapper:fullscreen .timeline,
+  .video-wrapper:-webkit-full-screen .fullscreen-btn,
+  .video-wrapper:-webkit-full-screen .pause-btn,
+  .video-wrapper:-webkit-full-screen .timeline{
+    opacity:1; pointer-events:auto; display:flex;
   }
+  /* Place FS buttons top-corners */
   .video-wrapper:fullscreen .fullscreen-btn,
   .video-wrapper:-webkit-full-screen .fullscreen-btn{
-    display:flex;
     top:calc(env(safe-area-inset-top, 0px) + 16px);
     right:calc(env(safe-area-inset-right, 0px) + 16px);
     bottom:auto;
@@ -187,18 +196,21 @@
     left:calc(env(safe-area-inset-left, 0px) + 16px);
     bottom:auto;
   }
-  /* Bottom scrim in fullscreen to lift timeline contrast */
-  .video-wrapper:fullscreen::after,
-  .video-wrapper:-webkit-full-screen::after{
-    content:""; position:absolute; left:0; right:0; bottom:0; height:140px;
-    background:linear-gradient(to top, rgba(0,0,0,.65), rgba(0,0,0,0));
-    pointer-events:none; z-index:2;
+  /* Hide FS controls when user toggles (mobile) */
+  .video-wrapper.fs-hidden:fullscreen .fullscreen-btn,
+  .video-wrapper.fs-hidden:fullscreen .pause-btn,
+  .video-wrapper.fs-hidden:fullscreen .timeline,
+  .video-wrapper.fs-hidden:-webkit-full-screen .fullscreen-btn,
+  .video-wrapper.fs-hidden:-webkit-full-screen .pause-btn,
+  .video-wrapper.fs-hidden:-webkit-full-screen .timeline{
+    opacity:0; pointer-events:none;
   }
 
-/* ===== Timeline (hidden by default; only in fullscreen) ===== */
+  /* ===== Timeline (minimized on hover/tap; always available in FS unless fs-hidden) ===== */
   .timeline{
     position:absolute; left:10px; right:10px; bottom:12px; height:18px; z-index:3;
     display:none; align-items:center; touch-action:none; user-select:none;
+    opacity:0; transition:opacity .18s ease;
   }
   .timeline .track{
     position:relative; width:100%; height:8px; border-radius:999px; overflow:hidden;
@@ -211,6 +223,20 @@
   .timeline .progress{position:absolute; left:0; top:0; bottom:0; width:0%; background:linear-gradient(90deg, rgba(84,160,255,1), rgba(84,160,255,.75));}
   .timeline .handle{position:absolute; top:50%; transform:translate(-50%,-50%); width:14px; height:14px; border-radius:999px; background:#fff; opacity:.98; box-shadow:0 2px 12px rgba(0,0,0,.45); pointer-events:none;}
 
+  /* Show timeline when wrapper shows controls OR on hover */
+  .video-wrapper.show-controls .timeline{ display:flex; opacity:1; }
+  @media (hover:hover){
+    .video-wrapper:hover .timeline{ display:flex; opacity:1; }
+  }
+
+  /* Bottom scrim in fullscreen for contrast */
+  .video-wrapper:fullscreen::after,
+  .video-wrapper:-webkit-full-screen::after{
+    content:""; position:absolute; left:0; right:0; bottom:0; height:140px;
+    background:linear-gradient(to top, rgba(0,0,0,.65), rgba(0,0,0,0));
+    pointer-events:none; z-index:2;
+  }
+
   /* iOS simulated fullscreen overlay */
   .fs-overlay{
     position:fixed; inset:0; z-index:10000; background:#000; display:none;
@@ -221,24 +247,25 @@
   .fs-overlay .video-wrapper video{ width:100%; height:100%; max-height:none; object-fit:contain; }
   .fs-overlay .learnmore-btn{ display:none; }
 
-  /* Show + clarify controls inside overlay */
-  .fs-overlay .timeline,
+  /* Overlay controls visible by default; hide when fs-hidden toggled */
+  .fs-overlay .fullscreen-btn,
   .fs-overlay .pause-btn,
-  .fs-overlay .fullscreen-btn{ display:flex; }
-  .fs-overlay .fullscreen-btn{
-    right:calc(env(safe-area-inset-right) + 16px);
-    top:calc(env(safe-area-inset-top) + 16px);
-    bottom:auto;
-  }
-  .fs-overlay .pause-btn{
-    left:calc(env(safe-area-inset-left) + 16px);
-    top:calc(env(safe-area-inset-top) + 16px);
-    bottom:auto;
-  }
-  .fs-overlay .video-wrapper::after{
-    content:""; position:absolute; left:0; right:0; bottom:0; height:140px;
-    background:linear-gradient(to top, rgba(0,0,0,.65), rgba(0,0,0,0));
-    pointer-events:none; z-index:2;
+  .fs-overlay .timeline{ display:flex; opacity:1; pointer-events:auto; }
+  .fs-overlay .video-wrapper.fs-hidden .fullscreen-btn,
+  .fs-overlay .video-wrapper.fs-hidden .pause-btn,
+  .fs-overlay .video-wrapper.fs-hidden .timeline{ opacity:0; pointer-events:none; }
+
+  /* Subtle controls on mobile */
+  @media (hover:none), (pointer:coarse){
+    .fullscreen-btn, .pause-btn{
+      font-size:16px; padding:8px 10px; border-radius:10px;
+      border:1px solid rgba(255,255,255,.22);
+      box-shadow:0 4px 14px rgba(0,0,0,.45);
+      background:rgba(17,23,34,.68);
+    }
+    .timeline{ height:16px; }
+    .timeline .track{ height:6px; }
+    .timeline .handle{ width:12px; height:12px; }
   }
 
   footer{text-align:center;padding:20px 0;border-top:1px solid rgba(255,255,255,.06);color:var(--muted);font-size:14px;}
@@ -282,12 +309,11 @@
           <span class="label">Learn more</span>
         </a>
 
-        <!-- Fullscreen toggle (lower in normal view) -->
-        <button class="fullscreen-btn" id="fullscreenToggle" aria-label="Enter fullscreen">⤢</button>
-        <!-- Play/Pause toggle (shows only in fullscreen) -->
+        <!-- Controls -->
         <button class="pause-btn" id="pauseToggle" aria-label="Pause">❚❚</button>
+        <button class="fullscreen-btn" id="fullscreenToggle" aria-label="Enter fullscreen">⤢</button>
 
-        <!-- Timeline (only in fullscreen) -->
+        <!-- Timeline -->
         <div class="timeline" id="videoTimeline" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-label="Video progress">
           <div class="track">
             <div class="buffer" id="tlBuffer"></div>
@@ -335,7 +361,7 @@
   learnMoreBtn.addEventListener('mouseleave', closeLabel);
   learnMoreBtn.addEventListener('blur', closeLabel);
 
-  /* ===== Video handling (iOS simulated fullscreen to avoid exit-freeze) ===== */
+  /* ===== Video handling (freeze-proof + controls logic) ===== */
   const wrapper = document.getElementById('videoWrapper');
   let video = document.getElementById('lyloVideo');
   const fsBtn = document.getElementById('fullscreenToggle');
@@ -343,10 +369,11 @@
 
   const IS_IOS = (() => {
     const ua = navigator.userAgent || '';
-       const platform = navigator.platform || '';
+    const platform = navigator.platform || '';
     const macTouch = platform === 'MacIntel' && navigator.maxTouchPoints > 1;
     return /iPad|iPhone|iPod/.test(ua) || macTouch;
   })();
+  const isHoverable = window.matchMedia('(hover: hover)').matches;
 
   function safePlay(v=video){ try{ v.play().catch(()=>{});}catch(e){} }
 
@@ -378,22 +405,17 @@
     if (video.readyState >= 2) onReady(); else video.addEventListener('loadeddata', onReady, { once:true });
 
     startFrameWatch(video);
-    const onTap = () => { safePlay(); if (video.paused){ video.setAttribute('controls',''); safePlay(); } };
-    video.addEventListener('touchstart', onTap, { passive:true, once:true });
-    video.addEventListener('click', onTap, { once:true });
+    bindTapHoverControlReveal();   // re-bind tap/hover logic
+    bindTimeline(true);            // re-bind timeline to fresh element
     video.addEventListener('play', updatePauseBtnUI);
     video.addEventListener('pause', updatePauseBtnUI);
-
-    bindTimeline(true);
   }
 
   (function boot(){
     const onReady = () => safePlay();
     if (video.readyState >= 2) onReady(); else video.addEventListener('loadeddata', onReady, { once:true });
     startFrameWatch(video);
-    const onTap = () => { safePlay(); if (video.paused){ video.setAttribute('controls',''); safePlay(); } };
-    video.addEventListener('touchstart', onTap, { passive:true, once:true });
-    video.addEventListener('click', onTap, { once:true });
+    bindTapHoverControlReveal();
     video.addEventListener('play', updatePauseBtnUI);
     video.addEventListener('pause', updatePauseBtnUI);
   })();
@@ -418,6 +440,7 @@
     if (document.webkitExitFullscreen) return document.webkitExitFullscreen();
   }
   function updateFsBtnUI(full){
+    // ⤢ enter (maximize), ⤡ exit (minimize)
     fsBtn.textContent = full ? '⤡' : '⤢';
     fsBtn.setAttribute('aria-label', full ? 'Exit fullscreen' : 'Enter fullscreen');
   }
@@ -431,7 +454,8 @@
       pauseBtn.setAttribute('aria-label','Pause');
     }
   }
-  pauseBtn.addEventListener('click', () => {
+  pauseBtn.addEventListener('click', (e) => {
+    e.stopPropagation();
     if (video.paused) safePlay();
     else video.pause();
     updatePauseBtnUI();
@@ -454,6 +478,7 @@
     fsOverlay.appendChild(wrapper);
     fsOverlay.classList.add('open');
     overlayOpen = true;
+    wrapper.classList.remove('fs-hidden'); // ensure controls visible initially
     updateFsBtnUI(true);
     safePlay();
     updatePauseBtnUI();
@@ -467,11 +492,13 @@
       placeholder = null;
     }
     overlayOpen = false;
+    wrapper.classList.remove('fs-hidden'); // reset hidden state
     updateFsBtnUI(false);
     setTimeout(() => { if (!video.paused && framesStale(700)) rebuildVideoInline(); }, 300);
   }
 
-  fsBtn.addEventListener('click', async () => {
+  fsBtn.addEventListener('click', async (e) => {
+    e.stopPropagation();
     if (IS_IOS){
       overlayOpen ? closeOverlay() : openOverlay();
     } else {
@@ -483,7 +510,47 @@
   document.addEventListener('fullscreenchange', () => { updateFsBtnUI(!!isFullscreen()); updatePauseBtnUI(); });
   document.addEventListener('webkitfullscreenchange', () => { updateFsBtnUI(!!isFullscreen()); updatePauseBtnUI(); });
 
-  /* ===== Timeline: fullscreen only ===== */
+  /* ===== Show/hide controls in MINIMIZED and toggle in FULLSCREEN (mobile) ===== */
+  let controlsTimer = null;
+  function showInlineControls(ms=1500){
+    wrapper.classList.add('show-controls');
+    if (controlsTimer) clearTimeout(controlsTimer);
+    if (!isHoverable){
+      controlsTimer = setTimeout(()=>{ wrapper.classList.remove('show-controls'); }, ms);
+    }
+  }
+  function toggleInlineControls(){
+    if (wrapper.classList.contains('show-controls')) wrapper.classList.remove('show-controls');
+    else showInlineControls();
+  }
+  function toggleFSControlsMobile(){
+    // Only for touch devices and only in fullscreen (overlay or native)
+    if (isHoverable) return;
+    if (!(overlayOpen || isFullscreen())) return;
+    wrapper.classList.toggle('fs-hidden');
+  }
+
+  function tapAreaHandler(){
+    // If fullscreen on mobile, toggle FS controls
+    if (!isHoverable && (overlayOpen || isFullscreen())) { toggleFSControlsMobile(); return; }
+    // Else toggle inline minimized controls
+    toggleInlineControls();
+  }
+
+  function bindTapHoverControlReveal(){
+    // Tap/click anywhere on the video area to manage controls
+    video.addEventListener('touchstart', tapAreaHandler, { passive:true });
+    video.addEventListener('click', tapAreaHandler);
+    // Desktop hover reveal handled via CSS :hover
+    if (isHoverable){
+      wrapper.addEventListener('mouseleave', () => wrapper.classList.remove('show-controls'));
+      wrapper.addEventListener('mouseenter', () => wrapper.classList.add('show-controls'));
+      wrapper.addEventListener('focusin', () => wrapper.classList.add('show-controls'));
+      wrapper.addEventListener('focusout', () => wrapper.classList.remove('show-controls'));
+    }
+  }
+
+  /* ===== Timeline ===== */
   const tl = document.getElementById('videoTimeline');
   const tlTrack = tl.querySelector('.track');
   const tlBuffer = document.getElementById('tlBuffer');
@@ -536,6 +603,7 @@
     seekToPercent(p);
     updateProgressUI();
     e.preventDefault();
+    e.stopPropagation();
   }
   function onPointerMove(e){
     if (!dragging) return;
@@ -573,7 +641,7 @@
 
   bindTimeline();
 
-  /* ===== CTA: mobile-only delayed nav (no spinner) ===== */
+  /* ===== CTA: mobile-only delayed nav ===== */
   const joinCta = document.getElementById('joinCta');
   const isMobile = window.matchMedia('(max-width: 979px)');
   const DELAY_MS = 900;
